jumping btn bug fixed

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -85,7 +85,7 @@
     &__btn {
       margin-right: 35px;
       @include breakpoint(laptop) {
-        margin-right: 30px;
+        margin-right: 25px;
       }
       @include breakpoint(tablet) {
         margin-right: 0;
